--- a/ZPN.html
+++ b/ZPN.html
@@ -372,7 +372,7 @@ A more common example is posture. We are told to have a straight posture otherwi
 
 [[Let&#39;s continue now to understanding the nature of stress and tension]]</tw-passagedata><tw-passagedata pid="26" name="I am open to the fact that my physical defect may not be causing the pain" tags="" position="1600,25" size="100,100">Excellent.
 
-It can be scary to see a scan with your defect on there. However, knowing that it&#39;s a normal occurence for many others not in pain can be help to relax and for you to know that your body is fine.
+It can be scary to see a scan with your defect on there. However, knowing that it&#39;s a normal occurence for many others not in pain can help you to relax and for you to know that your body is fine.
 
 An interesting fact that is that radiology is recognized for its significant variability in diagnostic interpretations - (radiologists are the doctors that interpret the scans).
 
@@ -442,7 +442,7 @@ It&#39;s HOW YOU HANDLE the feelings that come up is what is important.
 
 For people in pain, healing begins by noticing the feelings that come up when your personality traits are activated.
 
-For example, how do you feel when you&#39;re a perfectionist and things don&#39;t turn out perfect? By the way 80% of people in pain are perfectionists, so I&#39;m guessing you can relate to this ;)
+For example, how do you feel when you&#39;re a perfectionist and things don&#39;t turn out perfect? By the way 80% of people in pain are perfectionists, so I&#39;m guessing you can relate to this 😉 
 
 And what if at the same time being a perfectionist, you are also hard on yourself, how would you feel?
 
@@ -659,7 +659,7 @@ Thank you for bearing with me.
 We have come a long way and it&#39;s just a few more concepts to go.
 
 We&#39;ve talked about emotions, but now lets get familiar with them.
-This is a list of common emotions that keep people in pain.
+This is a list of common emotions that //when unprocessed// keep people in pain.
 
 &lt;table&gt;
   &lt;tr&gt;
@@ -753,7 +753,7 @@ Would you be open to allowing yourself to experience all of these emotions shown
 
 When things are out of our control, one of the most common emotions to come up is anger. People usually like being in control (independence) and they hate it when they lose it. 
 
-It&#39;s common to believe that by allowing anger, you will lose control and do harmful actions, however, this does not have to be the case if we can sit with our anger.
+It&#39;s common to believe that by allowing anger, you will lose control and do harmful actions, however, this does not have to be the case if you can sit with your anger.
 
 Because of societal expectations and past experiences and most likely observing our childhood caregivers, people tend to bottle up the anger or even ignore that they are feeling it, leaving it unprocessed.
 
@@ -792,6 +792,8 @@ Another interesting fact about emotions is that the more you allow yourself to e
 Imagine if you are crying. If you cry harder, you&#39;ll stop crying sooner. 
 
 Or imagine you are very happy. The happier you are the faster the happiness dissipates, which actually sucks, because we&#39;d love to keep that happiness longer, but just like sadness or anger, happiness doesn&#39;t stay. All emotions are temporary when we allow ourselves to experience them. Of course, we don&#39;t resist happiness, and in the same way we should not resist the negative emotions either.
+
+Which reminds me of a famous saying &quot;Whatever you resist persists.&quot; So the secret to healing is to allow whatever emotion is happening, to even accelerate it. Later you will see the emotional meditation process we use does exactly that.
 
 You are making excellent progress having reached this point. 
 
@@ -894,7 +896,7 @@ You may recall you previously touched on and [[answered this question.|Ok, I get
 
 Now let&#39;s answer this question in great detail.
 Take an hour or however long it takes to do this exercise.
-Take out pen and writing pad and start writing (if you&#39;re more comfortable using a computer that is fine, however there is something visceral about pen and paper that can be benefical).
+Take out pen and writing pad and start writing (if you&#39;re more comfortable using a computer that is fine, however there is something visceral about pen and paper that can be beneficial).
 
 Answer this question: 
 
