--- a/test.html
+++ b/test.html
@@ -119,7 +119,28 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 .big-text {
   font-size: 24px;
 }
-</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.trackDecision = function(decisionLabel) {
+</style><script role="script" id="twine-user-script" type="text/twine-javascript">// Google Analytics tracking script
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-KWSQ2NKJGV');
+
+
+// Create a script element to load Google Analytics
+var gaScript = document.createElement('script');
+gaScript.async = true;
+gaScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-KWSQ2NKJGV';
+document.head.appendChild(gaScript);
+
+// Initialize Google Analytics
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-KWSQ2NKJGV');
+
+
+
+window.trackDecision = function(decisionLabel) {
     if (window.gtag && typeof gtag === "function") {
         gtag('event', 'make_decision', {
             'event_category': 'Story Decisions',
@@ -130,17 +151,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
         setTimeout(() => trackDecision(decisionLabel), 1000); // Retry after 1 second
     }
 };
-</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">&lt;!-- Google tag (gtag.js) --&gt;
-&lt;script async src=&quot;https://www.googletagmanager.com/gtag/js?id=G-KWSQ2NKJGV&quot;&gt;&lt;/script&gt;
-&lt;script&gt;
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag(&#39;js&#39;, new Date());
-
-  gtag(&#39;config&#39;, &#39;G-KWSQ2NKJGV&#39;);
-&lt;/script&gt;
-
-Excellent.
+</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">Excellent.
 
 It&#39;s good that you have experienced all of these emotions at some point or that you are open to experiencing them. 
 
@@ -223,7 +234,7 @@ You are making excellent progress having reached this point.
 ║                                        ║
 ║                                        ║
 ║                  Vtag                 ║
-║                   tag in file                     ║
+║                   tag start in js                     ║
 ║                 [[Anger]]                  ║
 ║                                        ║
 ║                                        ║
