--- a/test.html
+++ b/test.html
@@ -222,8 +222,8 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vtag                 ║
-║                   tag back to pass                     ║
+║                  Vabc                 ║
+║                                        ║
 ║                 [[Anger]]                  ║
 ║                                        ║
 ║                                        ║
