--- a/test.html
+++ b/test.html
@@ -127,7 +127,6 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
         });
     } else {
         console.error("Google Analytics not available.");
-        setTimeout(() => trackDecision(decisionLabel), 1000); // Retry after 1 second
     }
 };
 </script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">&lt;!-- Google tag (gtag.js) --&gt;
@@ -222,7 +221,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vabc                 ║
+║                  Vadc                 ║
 ║                                        ║
 ║                 [[Anger]]                  ║
 ║                                        ║
