--- a/test.html
+++ b/test.html
@@ -130,13 +130,13 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
     }
 };
 </script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">&lt;!-- Google tag (gtag.js) --&gt;
-&lt;script async src=&quot;https://www.googletagmanager.com/gtag/js?id=G-KWSQ2NKJGV&quot;&gt;&lt;/script&gt;
+&lt;script async src=&quot;https://www.googletagmanager.com/gtag/js?id=G-5EX36QY500&quot;&gt;&lt;/script&gt;
 &lt;script&gt;
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag(&#39;js&#39;, new Date());
 
-  gtag(&#39;config&#39;, &#39;G-KWSQ2NKJGV&#39;);
+  gtag(&#39;config&#39;, &#39;G-5EX36QY500&#39;);
 &lt;/script&gt;
 
 Excellent.
@@ -221,7 +221,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vadc                 ║
+║                  Vtag2                 ║
 ║                                        ║
 ║                 [[Anger]]                  ║
 ║                                        ║
