--- a/test.html
+++ b/test.html
@@ -135,14 +135,11 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
         console.error("Google Analytics not available.");
     }
 };
+
 </script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">&lt;!-- Google tag (gtag.js) --&gt;
 &lt;script async src=&quot;https://www.googletagmanager.com/gtag/js?id=G-73ZBHD5RXL&quot;&gt;&lt;/script&gt;
 &lt;script&gt;
-<<<<<<< HEAD
-  var script = document.createElement(&#39;script&#39;);
-=======
 var script = document.createElement(&#39;script&#39;);
->>>>>>> 04983cfbc9001fb3dbefee081a21138ea27bbd47
 script.async = true;
 script.src = &#39;https://www.googletagmanager.com/gtag/js?id=G-73ZBHD5RXL&#39;;
 document.head.appendChild(script);
@@ -151,13 +148,7 @@ document.head.appendChild(script);
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag(&#39;js&#39;, new Date());
-<<<<<<< HEAD
-
 gtag(&#39;config&#39;, &#39;G-73ZBHD5RXL&#39;);
-
-=======
-gtag(&#39;config&#39;, &#39;G-73ZBHD5RXL&#39;);
->>>>>>> 04983cfbc9001fb3dbefee081a21138ea27bbd47
 &lt;/script&gt;
 
 Excellent.
@@ -233,6 +224,9 @@ You are making excellent progress having reached this point.
 </tw-passagedata><tw-passagedata pid="4" name="Title Page" tags="" position="125,150" size="100,100">&lt;pre&gt;
 ╔════════════════════════════════════════╗
 ║                                        ║
+&lt;pre&gt;
+╔════════════════════════════════════════╗
+║                                        ║
 ║                                        ║
 ║┌──────────────────────────────────────┐║
 ║│    HEAL YOURSELF FROM CHRONIC PAIN   │║
@@ -242,11 +236,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-<<<<<<< HEAD
-║                  V-adrian-bk                ║
-=======
-║                  V-adrian                 ║
->>>>>>> 04983cfbc9001fb3dbefee081a21138ea27bbd47
+║                  V-adrian-bk3                 ║
 ║                    back to orig in passage                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
@@ -257,7 +247,7 @@ You are making excellent progress having reached this point.
 
 
 
-</tw-passagedata><tw-passagedata pid="5" name="Code" tags="" position="1050,400" size="100,100">Inside passage:
+</tw-passagedata><tw-passagedata pid="5" name="Code" tags="" position="425,400" size="100,100">Inside passage:
 
 For test site healyourpain.carrd.co
 &lt;!-- Google tag (gtag.js) --&gt;
