--- a/test.html
+++ b/test.html
@@ -171,9 +171,13 @@ How do you feel about anger?
     &lt;&lt;run trackDecision(&quot;I avoid being angry because its pointless&quot;)&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-[[I am afraid of being angry because I may lose control of myself-&gt;Anger avoidant]]
+&lt;&lt;link &quot;I am afraid of being angry because I may lose control of myself&quot; &quot;Anger avoidant&quot;&gt;&gt;
+    &lt;&lt;run trackDecision(&quot;I am afraid of being angry because I may lose control of myself&quot;)&gt;&gt;
+&lt;&lt;/link&gt;&gt;
 
-[[I have seen people get angry and I never want to be like that so I avoid anger-&gt;Anger avoidant]]
+&lt;&lt;link &quot;I have seen people get angry and I never want to be like that so I avoid anger&quot; &quot;Anger avoidant&quot;&gt;&gt;
+    &lt;&lt;run trackDecision(&quot;I have seen people get angry and I never want to be like that so I avoid anger&quot;)&gt;&gt;
+&lt;&lt;/link&gt;&gt;
 
 [[I allow myself to feel anger but I take no action when feeling anger-&gt;Anger accepting]]
 
@@ -238,7 +242,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  V-adrian-git-works                 ║
+║                  V-adrian-git-worksx4                 ║
 ║                    back to orig in passage                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
