--- a/test.html
+++ b/test.html
@@ -179,9 +179,13 @@ How do you feel about anger?
     &lt;&lt;run trackDecision(&quot;I have seen people get angry and I never want to be like that so I avoid anger&quot;)&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-[[I allow myself to feel anger but I take no action when feeling anger-&gt;Anger accepting]]
+&lt;&lt;link &quot;I allow myself to feel anger but I take no action when feeling anger&quot; &quot;Anger accepting&quot;&gt;&gt;
+    &lt;&lt;run trackDecision(&quot;I allow myself to feel anger but I take no action when feeling anger&quot;)&gt;&gt;
+&lt;&lt;/link&gt;&gt;
 
-[[I am comfortable with experiencing anger whenever it comes up and just sitting with it-&gt;Anger accepting]]</tw-passagedata><tw-passagedata pid="2" name="Anger avoidant" tags="A-list-of-things" position="625,75" size="100,100">It seems you are uncomfortable allowing yourself to experience anger.
+&lt;&lt;link &quot;I am comfortable with experiencing anger whenever it comes up and just sitting with it&quot; &quot;Anger accepting&quot;&gt;&gt;
+    &lt;&lt;run trackDecision(&quot;I am comfortable with experiencing anger whenever it comes up and just sitting with it&quot;)&gt;&gt;
+&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Anger avoidant" tags="A-list-of-things" position="625,75" size="100,100">It seems you are uncomfortable allowing yourself to experience anger.
 
 When things are out of our control, one of the most common emotions to come up is anger. People usually like being in control (independence) and they hate it when they lose it. 
 
@@ -242,7 +246,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  V-adrian-git-worksx4                 ║
+║                  V-adrian-git-worksx6                 ║
 ║                    back to orig in passage                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
