--- a/test.html
+++ b/test.html
@@ -137,18 +137,18 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 };
 
 </script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">&lt;!-- Google tag (gtag.js) --&gt;
-&lt;script async src=&quot;https://www.googletagmanager.com/gtag/js?id=G-73ZBHD5RXL&quot;&gt;&lt;/script&gt;
+&lt;script async src=&quot;https://www.googletagmanager.com/gtag/js?id=G-5EX36QY500&quot;&gt;&lt;/script&gt;
 &lt;script&gt;
 var script = document.createElement(&#39;script&#39;);
 script.async = true;
-script.src = &#39;https://www.googletagmanager.com/gtag/js?id=G-73ZBHD5RXL&#39;;
+script.src = &#39;https://www.googletagmanager.com/gtag/js?id=G-5EX36QY500&#39;;
 document.head.appendChild(script);
 
 // Initialize Google Analytics
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag(&#39;js&#39;, new Date());
-gtag(&#39;config&#39;, &#39;G-73ZBHD5RXL&#39;);
+gtag(&#39;config&#39;, &#39;G-5EX36QY500&#39;);
 &lt;/script&gt;
 
 Excellent.
@@ -246,7 +246,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  V-adrian-git-worksx6                 ║
+║                  V-git-worksx6-single tag                 ║
 ║                    back to orig in passage                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
@@ -257,47 +257,6 @@ You are making excellent progress having reached this point.
 
 
 
-</tw-passagedata><tw-passagedata pid="5" name="Code" tags="" position="425,400" size="100,100">Inside passage:
-
-For test site healyourpain.carrd.co
-&lt;!-- Google tag (gtag.js) --&gt;
-&lt;script async src=&quot;https://www.googletagmanager.com/gtag/js?id=G-73ZBHD5RXL&quot;&gt;&lt;/script&gt;
-&lt;script&gt;
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag(&#39;js&#39;, new Date());
-
-  gtag(&#39;config&#39;, &#39;G-73ZBHD5RXL&#39;);
-&lt;/script&gt;
-
-
-
-Direct to Js story :
-(seems to say GA not available when I do it this way in console error)
-
-// Append Google Analytics script to the document head
-document.head.appendChild(Object.assign(document.createElement(&#39;script&#39;), {
-    async: true,
-    src: &#39;https://www.googletagmanager.com/gtag/js?id=G-73ZBHD5RXL&#39;,
-    onload: function() {
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag(&#39;js&#39;, new Date());
-        gtag(&#39;config&#39;, &#39;G-73ZBHD5RXL&#39;);
-    }
-}));
-
-
-window.trackDecision = function(decisionLabel) {
-    if (window.gtag &amp;&amp; typeof gtag === &quot;function&quot;) {
-        gtag(&#39;event&#39;, &#39;make_decision&#39;, {
-            &#39;event_category&#39;: &#39;Story Decisions&#39;,
-            &#39;event_label&#39;: decisionLabel
-        });
-    } else {
-        console.error(&quot;Google Analytics not available.&quot;);
-    }
-};
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
