--- a/test.html
+++ b/test.html
@@ -137,18 +137,18 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 };
 
 </script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">&lt;!-- Google tag (gtag.js) --&gt;
-&lt;script async src=&quot;https://www.googletagmanager.com/gtag/js?id=G-5EX36QY500&quot;&gt;&lt;/script&gt;
+&lt;script async src=&quot;https://www.googletagmanager.com/gtag/js?id=G-73ZBHD5RXL&quot;&gt;&lt;/script&gt;
 &lt;script&gt;
 var script = document.createElement(&#39;script&#39;);
 script.async = true;
-script.src = &#39;https://www.googletagmanager.com/gtag/js?id=G-5EX36QY500&#39;;
+script.src = &#39;https://www.googletagmanager.com/gtag/js?id=G-73ZBHD5RXL&#39;;
 document.head.appendChild(script);
 
 // Initialize Google Analytics
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag(&#39;js&#39;, new Date());
-gtag(&#39;config&#39;, &#39;G-5EX36QY500&#39;);
+gtag(&#39;config&#39;, &#39;G-73ZBHD5RXL&#39;);
 &lt;/script&gt;
 
 Excellent.
@@ -246,7 +246,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  V-git-worksx6-single tag                 ║
+║                  V-git-worksx6-two-tag                 ║
 ║                    back to orig in passage                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
